# RetroFE

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  README.md  build.bat
.github/workflows/: build-appbundle.yml  build-appimage.yml  build-debian.yml  build-linux.yml  build-windows.yml  build.yml  jekyll-gh-pages.yml  pages.yml  publish-release.yml  sync-to-wiki.yml
Configuration/: Configuration.sln
Configuration/Configuration/: Configuration.csproj
Package/Environment/Common/: controls.conf  settings.conf
Package/Environment/Common/collections/Arcades/: README.md  settings.conf
Package/Environment/Common/collections/Arcades/playlists/: arcades.txt
Package/Environment/Linux/: retrofe.desktop
Package/Environment/MacOS/RetroFE.app/Contents/: Info.plist
Package/Environment/MacOS/RetroFE.app/Contents/Frameworks/: libgstapp-1.0.0.dylib  libgstaudio-1.0.0.dylib  libgstbase-1.0.0.dylib  libgstreamer-1.0.0.dylib  libgstvideo-1.0.0.dylib  libgthread-2.0.0.dylib
Package/Environment/MacOS/collections/: CREATING_COLLECTIONS.txt
Package/Environment/MacOS/collections/Arcade/: settings.conf
Package/Environment/MacOS/launchers/: Genesis.conf  Genesis_mame.conf  MAME.conf  README.md  Settings.conf  mameRosetta.conf
Package/Environment/Windows/launchers/: 3DO.conf  Dolphin.conf  Doom II.conf  Dreamcast.conf  Game Boy Advance.conf  Genesis.conf  Laser Disc.conf  Nintendo 64.conf  Outrun.conf  Playstation 1.conf  Playstation Portable.conf  README.md  SNES.conf  Sega Model 3.conf  Settings.conf  SettingsReboot.conf  Sinclair ZX Spectrum.conf  mame.conf  mamesavestate.conf
RetroFE/CMake/: FindGlib2.cmake  Versioning.cmake
RetroFE/Source/: CMakeLists.txt  Main.cpp  RetroFE.cpp  RetroFE.h  SDL.cpp  SDL.h
RetroFE/Source/Collection/: CollectionInfo.cpp  CollectionInfo.h  CollectionInfoBuilder.cpp  CollectionInfoBuilder.h  Item.cpp  Item.h  MenuParser.cpp  PlaylistDirtyRegistry.cpp  PlaylistDirtyRegistry.h  PlaylistPath.h
RetroFE/Source/Control/: InputHandler.h  JoyAxisHandler.cpp  JoyButtonHandler.cpp  JoyHatHandler.cpp  KeyboardHandler.cpp  MouseAxisHandler.cpp  MouseAxisHandler.h  MouseButtonHandler.cpp  MouseMoveHandler.cpp  MouseMoveHandler.h  MouseMovementHandler.cpp  MouseMovementHandler.h  TouchDragHandler.cpp  TouchDragHandler.h  UserInput.cpp  UserInput.h
RetroFE/Source/Control/Restrictor/: Restrictor.cpp  Restrictor.h  RestrictorInstance.cpp  RestrictorInstance.h  RestrictorManager.cpp  RestrictorManager.h  ServoStikRestrictor.cpp  ServoStikRestrictor.h  TOSGRSRestrictor.cpp  TOSGRSRestrictor.h
RetroFE/Source/Database/: Configuration.cpp  Configuration.h  DB.cpp  GlobalOpts.cpp  GlobalOpts.h  HiScores.cpp  HiScores.h  IScoredProvider.h  MetadataDatabase.cpp  MetadataDatabase.h
RetroFE/Source/Execute/: AmbientMode.cpp  AmbientMode.h  AttractMode.cpp  AttractMode.h  Launcher.cpp  Launcher.h  PatchExecutor.cpp  PatchExecutor.h
RetroFE/Source/Execute/Input/: IKeyboardBackend.h  InputMonitor.cpp  InputMonitor.h  KeyboardBackendFactory.h  SDLJoyStickScopeGuard.h
RetroFE/Source/Execute/Input/Platform/: KeyboardBackendLinux.cpp  KeyboardBackendMac.cpp  KeyboardBackendWindows.cpp
RetroFE/Source/Execute/Platform/: IProcessManager.h
RetroFE/Source/Execute/Platform/Unix/: UnixProcessManager.cpp  UnixProcessManager.h
RetroFE/Source/Execute/Platform/Windows/: WindowsProcessManager.cpp  WindowsProcessManager.h
RetroFE/Source/Execute/Util/: RestrictorGuard.h
RetroFE/Source/Graphics/: Font.cpp  Font.h  FontCache.cpp  FontCache.h  Page.cpp  Page.h  PageBuilder.cpp  PageBuilder.h  SingletonThreadPool.h  ThreadPool.cpp  ThreadPool.h  ViewInfo.cpp  ViewInfo.h
RetroFE/Source/Graphics/Animate/: Animation.cpp  AnimationEvents.cpp  AnimationEvents.h  Tween.cpp  Tween.h  TweenPool.cpp  TweenPool.h  TweenSet.cpp  TweenSet.h
RetroFE/Source/Graphics/Component/: Component.cpp  Component.h  Container.cpp  Container.h  Image.cpp  Image.h  ImageBuilder.cpp  ImageBuilder.h  MusicPlayerComponent.cpp  MusicPlayerComponent.h  ReloadableGlobalHiscores.cpp  ReloadableGlobalHiscores.h  ReloadableHiscores.cpp  ReloadableHiscores.h  ReloadableMedia.cpp  ReloadableMedia.h  ReloadableScrollingText.cpp  ReloadableScrollingText.h  ReloadableText.cpp  ReloadableText.h  ScrollingList.cpp  ScrollingList.h  Text.cpp  Text.h  Video.cpp  VideoBuilder.cpp  VideoBuilder.h  VideoComponent.cpp  VideoComponent.h
RetroFE/Source/Menu/: Menu.cpp  Menu.h
RetroFE/Source/Sound/: AudioBus.cpp  AudioBus.h  MusicPlayer.cpp  MusicPlayer.h  Sound.h  VuMeterDSP.cpp  VuMeterDSP.h
RetroFE/Source/Utility/: Log.cpp  Log.h  PayloadSync.cpp  PayloadSync.h  ThreadPool.cpp  ThreadPool.h  Utils.cpp  Utils.h
RetroFE/Source/Video/: GStreamerVideo.cpp  GStreamerVideo.h  GlibLoop.cpp  GlibLoop.h  IVideo.h  VideoFactory.cpp  VideoFactory.h  VideoPool.cpp  VideoPool.h
RetroFE/ThirdPartyMac/: README.md  libminizip.dylib  libusb-1.0.0.dylib
RetroFE/ThirdPartyMac/GStreamer.framework/Versions/1.0/Resources/: Info.plist
RetroFE/ThirdPartyMac/GStreamer.framework/Versions/1.0/lib/: GStreamer  libFLAC.8.dylib  libSoundTouch.dylib  liba52.0.dylib  libass.dylib  libavfilter.8.24.100.dylib  libavutil.57.17.100.dylib  libbz2.1.dylib  libcairo-gobject.2.dylib  libcairo-script-interpreter.2.dylib  libcairo.dylib  libcroco-0.6.3.dylib  libdav1d.6.dylib  libdca.0.dylib  libdv.4.dylib  (+101 more)
RetroFE/xcode/: Info.plist  delete_gstreamer_static_libs.sh  embed_version.sh
RetroFE/xcode-proj/: CMakeCache.txt  cmake_install.cmake
RetroFE/xcode-proj/CMakeScripts/: ReRunCMake.make
RetroFE/xcode-proj/retrofe.xcodeproj/: project.pbxproj
RetroFE/xcode/retrofe.xcodeproj/: project.pbxproj
RetroFE/xcode/retrofe.xcodeproj/xcshareddata/xcschemes/: retrofe.xcscheme
Scripts/: Package.py
Scripts/Raspi2/: install.sh
Scripts/macOS/: README.md  delete_gstreamer_unused_libs.sh  get_gstreamer_libs_used.sh
docs/: ADDITIONAL_FEATURES.md  CLI.md  COLLECTIONS.md  COLLECTION_SETTINGS.md  CONTROLS.md  GETTING_STARTED.md  GLOBAL_SETTINGS.md  Gemfile  META_INFORMATION.md  README.md  STRUCTURE.md  _config.yml
wiki/: CONTROLS.md  README.md
(+231 files in other folders)
